--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@mapbox/polyline": "^1.2.1",
     "@tailwindcss/vite": "^4.1.18",
     "@types/leaflet": "^1.9.21",
+    "fit-file-parser": "^2.0.5",
     "framer-motion": "^12.23.26",
     "html-to-image": "^1.11.13",
+    "jszip": "^3.10.1",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.560.0",
+    "pako": "^2.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
@@ -27,8 +31,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/jszip": "^3.4.0",
     "@types/mapbox__polyline": "^1.0.5",
     "@types/node": "^24.10.1",
+    "@types/pako": "^2.0.4",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
